set up https call

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,14 +15,16 @@ play.filters.enabled = [
 # API version (beta/v1 => gist, v2=mongo, fs=filesystem)
 version=v2
 
-mongodb.uri = "mongodb://"
+mongodb.uri = "mongodb://localhost:27017/admin?ssl=false"
 
 mongo-async-driver {
   akka {
     loglevel = WARNING
   }
 }
-
+settings: {
+  https.active=false
+}
 
 include "local.conf"
 
